--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         </div>
                         <div class="service-inner-content media-body">
                             <h4 class="h4-md">Produção de Alta Tecnologia</h4>
-                            <p>Para produzirmos soluções, a Pantanal® investe constantemente em máquinas e equipamentos, para continuar entregando qualidade e ótimas experiências para os nossos clientes<p></p>
+                            <p>Para criar soluções, a Pantanal® investe constantemente em máquinas e equipamentos, para continuar entregando qualidade e ótimas experiências para os nossos clientes<p></p>
                         </div>
                     </div>
                   </div>              
