--- a/sobre-a-pantanal-ferro-e-aco.html
+++ b/sobre-a-pantanal-ferro-e-aco.html
@@ -613,7 +613,7 @@
               <a href="http://api.whatsapp.com/send?1=pt_BR&amp;phone=5514998404310" target="_blank" value="WhatsApp Business">Dúvidas? Fale Conosco.</a>
             </div>
             <div class="col-sm-12 col-md-6 text-md-right text-center">
-                  Desenvolvido por: <a href="https://www.linkedin.com/in/vfsimao/" target="_blank" rel="nofollow">Victor F. Simão</a> © 2021 Todos os direitos reservados.
+              Desenvolvido por: <a href="https://www.linkedin.com/in/vfsimao/" target="_blank" rel="nofollow">Technologie Créative Montréal</a> © 2023 Todos os direitos reservados.
             </div>
         </div>
       </div>
